--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
 
-  <body onclick="abc()">
+  <body>
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
@@ -48,10 +48,4 @@
 
     {% include analytics.html %}
   </body>
-  <script>
-  function abc(){
-    
-    alert('test');
-  }
-  </script>
-</html>
+ </html>
