--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
           <nav>
             <a href="{{ site.baseurl }}/blog">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
-            <a href="{{ site.baseurl }}/document">Documents</a>
+            <a href="{{ site.baseurl }}/_posts/document.md">Documents</a>
           </nav>
         </header>
       </div>
