--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,7 @@
             <a href="{{ site.baseurl }}/blog">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
             <a href="{{ site.baseurl }}/_posts/description.md">Documents</a>
+            [Link to a post]({% link _posts/description.md %})
           </nav>
         </header>
       </div>
